--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
     </div>
 
     <!-- FOOTER -->
-    <div class="section footer">
+    <!-- <div class="section footer">
         <iframe src="/contact-frame.html" scrolling="no" />
-    </div>
+    </div> -->
 
     <div class="section footer">
         <div class="frame">
