--- a/index.html
+++ b/index.html
@@ -170,11 +170,7 @@
     </div>
 
     <!-- FOOTER -->
-    <!-- <div class="section footer">
-        <iframe src="/contact-frame.html" scrolling="no" />
-    </div> -->
-
-    <div class="section footer">
+    <div class="section ">
         <div class="frame">
             <p class="frame-title">CONTACT ME</p>
             <table class="frame-table">
