--- a/portfolio-legna-da-ardere.html
+++ b/portfolio-legna-da-ardere.html
@@ -69,8 +69,26 @@
     </div>
    
     <!-- FOOTER -->
-    <div class="section footer">
-        <iframe src="/contact-frame.html" scrolling="no" />
+    <div class="section ">
+        <div class="frame">
+            <p class="frame-title">CONTACT ME</p>
+            <table class="frame-table">
+                <tr class="frame-tr">
+                    <td valign="top" style="display: flex; justify-content: center;">
+                        <img  class="header-profile" src="images/my-profile.jpeg" alt="profile image">
+                    </td>
+                    <td class="frame-contenuto">
+                        <div class="vertical-line-frame"></div>
+                        <p class="frame-testo">
+                            If you are interested about my profile you can look my <a  href="https://www.linkedin.com/in/valentina-marcolin-479108239?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BWeoX39MYR5%2BwhtLeGKCpvQ%3D%3D" class="portfolio-link">linkedin account</a>.</br>
+                            </br>
+                            Or you can contact me directly by <a href="mailto:33valemarcolin2002@gmail.com?subject=Contact%20from%20Valentina%20website" class="portfolio-link">email</a> or by my phone number:<a href="tel:+393398322659" class="portfolio-link">+39 339 832 2659</a>
+                        </p>
+                    </td>
+                </tr>
+            </table>
+            
+        </div>
     </div>
 </body>
 </html>
